force-app/main/default/objects/Tuition_Payments_KZD__c/Tuition_Payments_KZD__c.object-meta.xml
<CustomObject>
    <description>Created By: Kehali
Business Unit: Alphaforce Oakland
Purpose: Tuition Payments KZD represents tracking payments made towards a student’s tuition cost</description>
    <label>Tuition Payments KZD</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payments Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tuition Payments KZD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>