force-app/main/default/objects/Tuition_Payments_KZD__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <businessOwnerUser>ademsash@alphaworks.tech.chappren2</businessOwnerUser>
    <description>Created By: Kehali Demsash
Purpose: To reflect any remaining or unpaid student tuition payments</description>
    <formula>Tuition__c  +  Fees__c  -  Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is calculated upon save.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>