force-app/main/default/objects/Tuition_Payments_KZD__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <description>Created By: Kehali Demsash
Purpose: To include charges such as facility fees and expenses to cover food etc.. services. Other fees may be connected to classes they are registered for such as books, game materials, and others.</description>
    <inlineHelpText>Enter Fee Amount (if applies)</inlineHelpText>
    <label>Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>