force-app/main/default/objects/Tuition_Payments_KZD__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <description>Created By: Kehali Demsash</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Tuition Payment Due Date</inlineHelpText>
    <label>Payment Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>