force-app/main/default/objects/Tuition_Payments_KZD__c/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <description>Created By: Kehali Demsash
Purpose: To reflect any payments that have already been made, including the enrollment deposit, will appear as a negative balance and be subtracted from students’ total charges</description>
    <inlineHelpText>Enter Student Payment</inlineHelpText>
    <label>Payments</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>