force-app/main/default/objects/Tuition_Payments_KZD__c/fields/Registration_KZD__c.field-meta.xml
<CustomField>
    <fullName>Registration_KZD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration KZD</label>
    <referenceTo>Registration_KZD__c</referenceTo>
    <relationshipLabel>Tuition Payments KZD</relationshipLabel>
    <relationshipName>Tuition_Payments_KZD</relationshipName>
    <type>Lookup</type>
</CustomField>