force-app/main/default/objects/Tuition_Payments_KZD__c/fields/Tuition__c.field-meta.xml
<CustomField>
    <fullName>Tuition__c</fullName>
    <description>Created By: Kehali</description>
    <inlineHelpText>Enter Tuition Amount</inlineHelpText>
    <label>Tuition</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>